objects/ASI_CRM_Purchase_Contract_Line_Item__c.object
<CustomObject>
    <description>ASI CRM JP - Purchase Contract Line</description>
    <fields>
        <fullName>ASI_CRM_AP_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A&amp;P Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_AP_Code__c.ASI_MFM_Inactive__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_AP_Code__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CRM JP AP Code</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_AP_Code__c</referenceTo>
        <relationshipLabel>Purchase Contract Line Items</relationshipLabel>
        <relationshipName>Purchase_Contract_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <summarizedField>ASI_CRM_Payment_Invoice_Line_Item__c.ASI_CRM_Final_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>ASI_CRM_Payment_Invoice_Line_Item__c.ASI_CRM_Sys_is_cancelled__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>ASI_CRM_Payment_Invoice_Line_Item__c.ASI_CRM_Purchase_Contract_Line_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_AnP_Description__c</fullName>
        <formula>ASI_CRM_AP_Code__r.ASI_MFM_AP_Description__c</formula>
        <label>A&amp;P Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Annual_Turnover__c</fullName>
        <formula>IF( ISBLANK(ASI_CRM_Sys_Ex_Price__c) , BLANKVALUE(ASI_CRM_Reg_Volume_Monthly__c, 0) * BLANKVALUE(ASI_CRM_Unit_Price__c, 0) * 12, BLANKVALUE(ASI_CRM_Reg_Volume_Monthly__c, 0) * BLANKVALUE( ASI_CRM_Sys_Ex_Price__c , 0) * 12 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Turnover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_BS_Retailer_Ship_To__c</fullName>
        <formula>ASI_CRM_Purchase_Contract__r.ASI_CRM_BS_Retailer_Ship_To__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BS/Retailer/Ship To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Condition_Of__c</fullName>
        <label>Condition Of</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Condition_To__c</fullName>
        <label>Condition To</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Condition__c</fullName>
        <formula>IF((ISBLANK(ASI_CRM_Condition_Of__c) || ISBLANK(ASI_CRM_Condition_To__c)), &quot;&quot;, TEXT(ASI_CRM_Condition_Of__c) &amp; &quot;:&quot; &amp; TEXT(ASI_CRM_Condition_To__c))</formula>
        <label>Condition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Current_Direct_Rebate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Direct Rebate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Current_Indirect_Rebate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Indirect Rebate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Ex_Price__c</fullName>
        <formula>IF(CONTAINS(RecordType.DeveloperName, &apos;ASI_CRM_JP_&apos;) , BLANKVALUE(ASI_CRM_Item_Group__r.ASI_CRM_Ex_Price__c, 0) -  BLANKVALUE(ASI_CRM_Item_Group__r.ASI_CRM_Semi_Direct_Rebate_Price__c, 0), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ex Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_MFM_Item_Group__c.ASI_CRM_CN_Not_In_Use__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_Item_Group__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>JP CRM Item Group</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>Purchase Contract Line Items</relationshipLabel>
        <relationshipName>Purchase_Contract_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JP_Current_Direct_Supporting__c</fullName>
        <label>Current Direct Supporting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Lowest_Threshold__c</fullName>
        <formula>IF(  ( ASI_CRM_Current_Direct_Rebate__c +  ASI_CRM_Current_Indirect_Rebate__c +  ASI_CRM_Unit_Price__c ) &gt;  ASI_CRM_Item_Group__r.ASI_CRM_Lowest_1__c ,  IF(( ASI_CRM_Current_Direct_Rebate__c +  ASI_CRM_Current_Indirect_Rebate__c +  ASI_CRM_Unit_Price__c )  &lt;= ASI_CRM_Item_Group__r.ASI_CRM_Lowest_2__c,      &apos;2. (&gt; MAX 1 &amp; &lt;= MAX 2)&apos;, 
&apos;3. (&gt; MAX 2)&apos;), 
&apos;1. (&lt;= MAX 1)&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MAX Threshold</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Month_10_Cost__c</fullName>
        <label>Apr(P10)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Month_11_Cost__c</fullName>
        <label>May(P11)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Month_12_Cost__c</fullName>
        <label>Jun(P12)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Net_Net_Price__c</fullName>
        <formula>IF( ISPICKVAL(ASI_CRM_Payment_Method__c, &quot;FOC w. condition&quot;),   BLANKVALUE(ASI_CRM_Net_Price__c, 0)  - (  BLANKVALUE(ASI_CRM_Unit_Price__c, 0)  *   BLANKVALUE(ASI_CRM_Condition_To__c, 0) / ASI_CRM_Condition_Of__c ),
IF( ISPICKVAL(ASI_CRM_Payment_Method__c, &quot;Buyback w. condition&quot;),   BLANKVALUE(ASI_CRM_Net_Price__c, 0)  - (  BLANKVALUE(ASI_CRM_Unit_Price__c, 0) * (  BLANKVALUE(ASI_CRM_Condition_To__c, 0)  / ( ASI_CRM_Condition_Of__c + ASI_CRM_Condition_To__c ))),
IF( (RecordType.DeveloperName = &quot;ASI_CRM_JP_Direct_Rebate_Contract_Line_Item&quot;) &amp;&amp; ISPICKVAL( ASI_CRM_Rebate_Type__c , &quot;08 - Direct Supporting&quot;)  , BLANKVALUE(ASI_CRM_Net_Price__c, 0) - BLANKVALUE(ASI_CRM_Unit_Price__c, 0) +  ASI_CRM_JP_Current_Direct_Supporting__c , IF( (RecordType.DeveloperName = &quot;ASI_CRM_JP_Direct_Rebate_Contract_Line_Item&quot;) || (RecordType.DeveloperName = &quot;ASI_CRM_JP_Indirect_Rebate_Contract_Line_Item&quot;), BLANKVALUE(ASI_CRM_Net_Price__c, 0) - BLANKVALUE(ASI_CRM_Unit_Price__c, 0), null))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Net Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Net_Price__c</fullName>
        <formula>ASI_CRM_Ex_Price__c  - IF(ISBLANK(ASI_CRM_Current_Direct_Rebate__c), 0, ASI_CRM_Current_Direct_Rebate__c) - IF(ISBLANK(ASI_CRM_Current_Indirect_Rebate__c), 0, ASI_CRM_Current_Indirect_Rebate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet__c</fullName>
        <formula>ASI_CRM_Purchase_Contract__r.ASI_CRM_Outlet__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlet</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Owner__c</fullName>
        <formula>ASI_CRM_Purchase_Contract__r.Owner:User.FirstName &amp; &quot; &quot; &amp; ASI_CRM_Purchase_Contract__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Pay_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pay To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ASI_CRM_Pay_To__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>ASI_CRM_JP_Pay_To</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_Pay_To__c.ASI_CRM_Active__c</field>
                <operation>notEqual</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_Pay_To__c</referenceTo>
        <relationshipLabel>Purchase Contract Line Items</relationshipLabel>
        <relationshipName>Purchase_Contract_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Buyback w/o condition</fullName>
                </value>
                <value>
                    <fullName>Buyback w. condition</fullName>
                </value>
                <value>
                    <fullName>FOC w/o condition</fullName>
                </value>
                <value>
                    <fullName>FOC w. condition</fullName>
                </value>
                <value>
                    <fullName>Promotion fee with target</fullName>
                </value>
                <value>
                    <fullName>Gift Coupon</fullName>
                </value>
                <value>
                    <fullName>Other Cash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Amount__c</fullName>
        <formula>BLANKVALUE(ASI_CRM_Unit_Price__c, 0) * BLANKVALUE(ASI_CRM_Quantity__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotion Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Purchase_Contract_Ln_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Purchase Contract Line External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Purchase_Contract__c</fullName>
        <label>Purchase Contract</label>
        <referenceTo>ASI_CRM_Purchase_Contract__c</referenceTo>
        <relationshipLabel>Purchase Contract Line Items</relationshipLabel>
        <relationshipName>Purchase_Contract_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_RSP_after_Rebate__c</fullName>
        <label>RSP after Rebate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_RSP_before_Rebate__c</fullName>
        <label>RSP before Rebate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Ratio__c</fullName>
        <formula>IF( ASI_CRM_Annual_Turnover__c = 0, 0, ASI_CRM_Promotion_Amount__c / ASI_CRM_Annual_Turnover__c)</formula>
        <label>Ratio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Rebate_Type__c</fullName>
        <label>Rebate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>08 - Direct Supporting</fullName>
                </value>
                <value>
                    <fullName>09 - Direct Special Spot</fullName>
                </value>
                <value>
                    <fullName>10 - Direct Anti-GMA</fullName>
                </value>
                <value>
                    <fullName>11 - Direct CS Price Promotion</fullName>
                </value>
                <value>
                    <fullName>02 - Indirect Supporting</fullName>
                </value>
                <value>
                    <fullName>03 - Key Account Listing Regular</fullName>
                </value>
                <value>
                    <fullName>04 - Indirect Special Spot</fullName>
                </value>
                <value>
                    <fullName>05 - Indirect Anti-GMA</fullName>
                </value>
                <value>
                    <fullName>06 - Indirect CS Price Promotion</fullName>
                </value>
                <value>
                    <fullName>07 - Key Account Listing Spot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Reg_Volume_Monthly__c</fullName>
        <label>Reg Volume (Monthly)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remaining_Balance__c</fullName>
        <formula>BLANKVALUE( ASI_CRM_Promotion_Amount__c , 0)  - BLANKVALUE(ASI_CRM_Amount_Paid__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remarks__c</fullName>
        <label>Remarks</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_AP_Code__c</fullName>
        <formula>ASI_CRM_AP_Code__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A&amp;P Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Ex_Price__c</fullName>
        <label>Sys_Ex Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Item_Group__c</fullName>
        <formula>ASI_CRM_Item_Group__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Target_Volume_Unit__c</fullName>
        <label>Target Volume Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Target_Volume__c</fullName>
        <label>Target Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Unit_Price__c</fullName>
        <label>Unit Price/Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Purchase Contract Line Item</label>
    <nameField>
        <displayFormat>PCL{00000000}</displayFormat>
        <label>Ref No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Contract Line Items</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_JP_Direct_Rebate_Contract_Line_Item</fullName>
        <active>true</active>
        <label>JP Direct Rebate Contract Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_Indirect_Rebate_Contract_Line_Item</fullName>
        <active>true</active>
        <label>JP Indirect Rebate Contract Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_SPTD_Contract_Line_Item</fullName>
        <active>true</active>
        <label>JP SPTD Contract Line Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_JP_AP_Code_Cannot_Null</fullName>
        <active>true</active>
        <errorConditionFormula>AND((RecordType.DeveloperName = &quot;ASI_CRM_JP_SPTD_Contract_Line_Item&quot;), ISBLANK(ASI_CRM_AP_Code__c))</errorConditionFormula>
        <errorDisplayField>ASI_CRM_AP_Code__c</errorDisplayField>
        <errorMessage>The AP Code cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_AP_Code_for_FOC</fullName>
        <active>true</active>
        <description>If the Payment Method is FOC, then the A&amp;P Code selected should be for FOC</description>
        <errorConditionFormula>AND(
OR( ISNEW() , ISCHANGED( ASI_CRM_AP_Code__c), ISCHANGED( ASI_CRM_Payment_Method__c ) ), 
    CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_JP_SPTD_Contract&quot;),
    (ISPICKVAL(ASI_CRM_Payment_Method__c, &quot;FOC w/o condition&quot;)||
    ISPICKVAL(ASI_CRM_Payment_Method__c, &quot;FOC w. condition&quot;)),
    !ASI_CRM_AP_Code__r.ASI_CRM_FOC_Invoice__c
)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_AP_Code__c</errorDisplayField>
        <errorMessage>You selected an AP Code that is not for FOC payment method</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_Condition_Of_To_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_JP_SPTD_Contract&quot;) &amp;&amp; (ISPICKVAL(ASI_CRM_Payment_Method__c, &quot;Buyback w. condition&quot;) || ISPICKVAL(ASI_CRM_Payment_Method__c, &quot;FOC w. condition&quot;) || ISPICKVAL(ASI_CRM_Payment_Method__c, &quot;Promotion fee with target&quot;) || ISPICKVAL(ASI_CRM_Payment_Method__c, &quot;Gift Coupon&quot;)) &amp;&amp; (ISBLANK(ASI_CRM_Condition_Of__c) || ISBLANK(ASI_CRM_Condition_To__c))</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Condition_Of__c</errorDisplayField>
        <errorMessage>Condition Of or Condition To must not be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_ItemGroup_Require_SKU</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR( ISNEW() ,  ISCHANGED( ASI_CRM_Item_Group__c ), ISCHANGED( ASI_CRM_Payment_Method__c ) ),
CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_JP_SPTD_Contract&quot;), 
(ISPICKVAL(ASI_CRM_Payment_Method__c, &quot;FOC w/o condition&quot;)|| 
ISPICKVAL(ASI_CRM_Payment_Method__c, &quot;FOC w. condition&quot;)), 
ISBLANK( ASI_CRM_Item_Group__r.ASI_CRM_Representative_SKU__c)  
)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Item_Group__c</errorDisplayField>
        <errorMessage>You must select Item Group with Representative SKU defined.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_Item_Group_Cannot_Null</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR((RecordType.DeveloperName = &quot;ASI_CRM_JP_SPTD_Contract_Line_Item&quot;), (RecordType.DeveloperName = &quot;ASI_CRM_JP_Direct_Rebate_Contract_Line_Item&quot;),(RecordType.DeveloperName = &quot;ASI_CRM_JP_Indirect_Rebate_Contract_Line_Item&quot;)), ISBLANK( ASI_CRM_Item_Group__c))</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Item_Group__c</errorDisplayField>
        <errorMessage>The Item Group cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_Pay_To_Cannot_Null</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(RecordType.DeveloperName = &quot;ASI_CRM_JP_Direct_Rebate_Contract_Line_Item&quot;,RecordType.DeveloperName = &quot;ASI_CRM_JP_Indirect_Rebate_Contract_Line_Item&quot;), ISBLANK( ASI_CRM_Pay_To__c))</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Pay_To__c</errorDisplayField>
        <errorMessage>The Pay To cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_Payment_Method_Cannot_Null</fullName>
        <active>true</active>
        <errorConditionFormula>AND((RecordType.DeveloperName = &quot;ASI_CRM_JP_SPTD_Contract_Line_Item&quot;), ISPICKVAL( ASI_CRM_Payment_Method__c, &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Payment_Method__c</errorDisplayField>
        <errorMessage>The Payment Method cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_Payment_Method_for_4399_4499</fullName>
        <active>true</active>
        <description>If A&amp;P Code 4399 or 4499 is selected, only allow payment method &quot;FOC w/o condition.</description>
        <errorConditionFormula>AND(
OR( ISNEW() , ISCHANGED( ASI_CRM_AP_Code__c), ISCHANGED( ASI_CRM_Payment_Method__c ) ), 
    CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_JP_SPTD_Contract&quot;),
    !ISPICKVAL(ASI_CRM_Payment_Method__c, &quot;FOC w/o condition&quot;),
    (ASI_CRM_AP_Code__r.ASI_MFM_AP_Code__c=&quot;4399&quot; || 
    ASI_CRM_AP_Code__r.ASI_MFM_AP_Code__c=&quot;4499&quot;)
)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Payment_Method__c</errorDisplayField>
        <errorMessage>Please select &quot;FOC w/o condition&quot; as a payment method for A&amp;P Code 4399 or 4499.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_Quality_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_JP&quot;) &amp;&amp; (ISPICKVAL(ASI_CRM_Payment_Method__c, &quot;Buyback w/o condition&quot;) || ISPICKVAL(ASI_CRM_Payment_Method__c, &quot;FOC w/o condition&quot;) || ISPICKVAL(ASI_CRM_Payment_Method__c, &quot;Other Cash&quot;)) &amp;&amp; ISBLANK(ASI_CRM_Quantity__c)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Quantity__c</errorDisplayField>
        <errorMessage>Quantity must not be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_Rebate_Type_Cannot_Null</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(RecordType.DeveloperName = &quot;ASI_CRM_JP_Direct_Rebate_Contract_Line_Item&quot;,RecordType.DeveloperName = &quot;ASI_CRM_JP_Indirect_Rebate_Contract_Line_Item&quot;), ISPICKVAL(  ASI_CRM_Rebate_Type__c, &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Rebate_Type__c</errorDisplayField>
        <errorMessage>The Rebate Type cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_Remarks_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_JP_SPTD_Contract_Line_Item&quot;),  ISPICKVAL( ASI_CRM_Payment_Method__c ,&quot;Other Cash&quot;), ISBLANK( ASI_CRM_Remarks__c )    )</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Remarks__c</errorDisplayField>
        <errorMessage>Remarks cannot be empty on Other Cash payment method.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_Target_Volume_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_JP&quot;) &amp;&amp; (ISPICKVAL(ASI_CRM_Payment_Method__c, &quot;Buyback w. condition&quot;) || ISPICKVAL(ASI_CRM_Payment_Method__c, &quot;FOC w. condition&quot;) || ISPICKVAL(ASI_CRM_Payment_Method__c, &quot;Promotion fee with target&quot;) || ISPICKVAL(ASI_CRM_Payment_Method__c, &quot;Gift Coupon&quot;)) &amp;&amp; ISBLANK(ASI_CRM_Target_Volume__c)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Target_Volume__c</errorDisplayField>
        <errorMessage>Target Volume must not be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_Unit_Price_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_JP&quot;) &amp;&amp; (ISPICKVAL(ASI_CRM_Payment_Method__c, &quot;Gift Coupon&quot;) || ISPICKVAL(ASI_CRM_Payment_Method__c, &quot;Promotion fee with target&quot;) || ISPICKVAL(ASI_CRM_Payment_Method__c, &quot;Other Cash&quot;)) &amp;&amp; ISBLANK(ASI_CRM_Unit_Price__c)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Unit_Price__c</errorDisplayField>
        <errorMessage>Unit Price/Cost must not be empty.</errorMessage>
    </validationRules>
</CustomObject>